# projekt_przejsciowy

./: .gitignore  CMakeLists.txt  README.md  drive_simulation.py  gui.ini
catkin_ws/devel/lib/pkgconfig/: projekt_przejsciowy.pc
catkin_ws/devel/share/projekt_przejsciowy/cmake/: projekt_przejsciowyConfig.cmake
catkin_ws/src/projekt_przejsciowy/: package.xml
catkin_ws/src/projekt_przejsciowy/src/: RobotManagementTab.cc  RobotManagementWindow.cc  WorldConfigurationWindow.cc  world_plugin.cpp
catkin_ws/src/projekt_przejsciowy/worlds/: l15.world
launch/: l15.launch
models/: README
models/imu/: model.config  model.sdf
models/kaloryfer/: model.config  model.sdf
models/kaloryfer/meshes/: Kaloryfer.dae
models/krzeslo/: model.config  model.sdf
models/krzeslo/meshes/: Krzeslo.dae
models/pioneer2dx_with_sensors/: model.config  model.sdf
models/sala_L15/: model.config  model.sdf
models/sala_L15/meshes/: Sala_L15.dae
models/smietnik/: model.config  model.sdf
models/smietnik/meshes/: Smietnik.dae
models/stol/: model.config  model.sdf
models/stol/meshes/: Stol.dae
models/szafa/: model.config  model.sdf
models/szafa/meshes/: Szafa.dae
pp_gazebo_plugin/: CMakeLists.txt  WorldConfigurationWindow.hh  experymentwindow.cpp  experymentwindow.h  pp_gazebo_plugin.cc  pp_gazebo_plugin.hh  world_plugin.cc  world_plugin.hh
src/: CMakeLists.txt  ResultsWindow.cc  ResultsWindow.hh  RobotManagementTab.cc  RobotManagementTab.hh  RobotManagementWindow.cc  RobotManagementWindow.hh  SimulationGUI.cc  SimulationGUI.hh  WorldConfigurationWindow.cc  WorldConfigurationWindow.hh  WorldControl.cc  world_plugin.cpp
worlds/: Inne Laboratorium 2.txt  l15.world  laboratorium_L15.world  salaInna.txt  salaL15.txt
